@@ -70,3 +70,7 @@ Changes by BC in Feb-Mar 2009
 ** Added SNP/CNV array
 
 ** Added increaseDbPerformance(conn)
+
+04-07-2009 - B Carvalho
+
+** Added warnings in case the user builds a package for a Human SNP Chip. These are available from BioConductor and do support CRLMM, the ones built here do *NOT* support CRLMM.
